* added bcdui.bcdAlerter (.info/.warn/.error) to show a slide in alert
* autogrow attribute for textarea widget
* Firefox v137.0.2 stopped supporting xslt document() function, extended our implementation to firefox
* SideBySideChooser uses i18n tokens for source and target caption translations

.Security:
* Remove SPNEGO authentication mechanism as it is outdated, use oAuth instead
* Deprecate bcdui4.Cors Filter for better CORS control using bcdui4.HttpHeaderSecurity

.Development:

.Bugfixes:
* inputNg: consider value of "step" attribute for type="numeric"
* WrsNextIdentifierServlet: fix counter creation with blockSize>1
* internal logging is now compatible with Log4j2 async logging (also with disruptor based method for high throughput logging)

.Incompatibilities:
* In SQLEngine::transform '-' postfix needs to be converted to '\_' to omit table alias like `INSERT INTO $t.painTableName ($t.colName_) VALUES (1)`
* Removal of Internet Explorer support
* javax to jakarta switch (for several packages e.g. javax.servlet)
* new 3rd party jars set
* cookies created are flagged as "secure", requiring https
* add BindingInfo servlet to web.xml
* OAuth2 configuration in shiro.ini:
** OAuthAuthenticatingFilter properties renamed: authScope to scope, redirectUrl to redirectUri, apiEndpoint to userInfoEndpoint
** `redirectUri` became optional, and this value is then derived from Servlet context at runtime instead, supporting virtual hosts
** `userInfoEndpoint` became optional, the user-id is then derived directly from the id-token send from the token endpoint. The call to user info endpoint is then skipped.
** oAuth now requires a popup for the login window, this looks more consistent and allows for cookie SameSite=strict setting
** OAuth Realms now need to create the session on successful login and cannot rely on JdbcRealm doing that anymore
* wrq filter operator like automatically escapes %, _ and \ now. Don't use local workarounds where you add \ yourself.