@@ -1788,18 +1788,16 @@ jQuery.extend(bcdui.widget,
    * @param {string}         [args.identsWithin]      Id of an element. If given bcdColIdent and bcdRowIdent are set to the innermost values given between the event source and the element given here. bcdRow/ColIdent do not need to be set at the same element.
    * @param {boolean}        [args.tableMode=false]   This flag can be set to 'true' if the 'bcdRowIdent' and 'bcdColIdent' parameters should be extracted from the HTML and added as parameters on the tooltipRenderer. They are derived from 'bcdRowIdent' and 'bcdColIdent' attributes of tr rows and header columns (td or th).
    * @param {targetHtmlRef}  [args.targetHtml]        The HTML listeners are placed on this Element instead of the targetHtml of the given targetRendererId.
-   * @param {function|string} [args.actionHandler]    String (representing a function name) or function which handles the click events of the contextMenu
+   * @param {function|string} [args.clickResolver]    String (representing a function name) or function which handles the click events of the contextMenu
    */
   createContextMenu: function(args){
 
     args = bcdui.factory._xmlArgs( args, bcdui.factory.validate.widget._schema_createContextMenu_args );
     bcdui.factory.validate.jsvalidation._validateArgs(args, bcdui.factory.validate.widget._schema_createContextMenu_args);
-    
-    let actionHandler = args.actionHandler;
-    if (typeof actionHandler == "string" && actionHandler.trim() != "") {
-      const cp = bcdui.util._getJsObjectFromString(actionHandler);
-      actionHandler = new cp();
-    }
+
+    let clickResolver = args.clickResolver;
+    if (typeof clickResolver == "string")
+      clickResolver = bcdui.util._toJsFunction(clickResolver);
 
     if (args.targetHtml) {
       var targetId = bcdui.util._getTargetHtml({targetHtml: args.targetHtml}, "bcdContextMenu_");
@@ -1852,7 +1850,7 @@ jQuery.extend(bcdui.widget,
           , identsWithin         : args.identsWithin
           , refreshMenuModel     : args.refreshMenuModel
           , offset               : args.offset
-          , clickResolver        : args.clickResolver
+          , clickResolver        : clickResolver
         });
       }
     });
